<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tudor.food_hunt.OrderActivity">

    <TextView
        android:id="@+id/order_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="15dp"
        android:text="@string/order_txt"
        app:layout_constraintBottom_toTopOf="@+id/order_name_inp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/order_name_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/order_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/order_address_inp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_txt" />

    <EditText
        android:id="@+id/order_address_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/order_address_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/order_phone_inp"
        app:layout_constraintStart_toStartOf="@+id/order_name_inp"
        app:layout_constraintTop_toBottomOf="@+id/order_name_inp" />

    <EditText
        android:id="@+id/order_phone_inp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/order_phone_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/order_send_btn"
        app:layout_constraintStart_toStartOf="@+id/order_address_inp"
        app:layout_constraintTop_toBottomOf="@+id/order_address_inp" />

    <Button
        android:id="@+id/order_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_send_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_phone_inp" />
</android.support.constraint.ConstraintLayout>
