<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tudor.food_hunt.UserActivity">

    <TextView
        android:id="@+id/user_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="71dp"
        android:gravity="center"
        android:text="@string/user_txt"
        app:layout_constraintBottom_toTopOf="@+id/user_tomap_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/user_tomap_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/user_tomap_btn"
        app:layout_constraintBottom_toTopOf="@+id/user_achievements_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_txt" />

    <Button
        android:id="@+id/user_achievements_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:text="@string/user_achievements_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_tomap_btn" />
</android.support.constraint.ConstraintLayout>
