<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tudor.food_hunt.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/main_offer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="15dp"
        android:text="@string/main_offer_btn"
        app:layout_constraintBottom_toTopOf="@+id/main_distribute_btn"
        app:layout_constraintStart_toStartOf="@+id/main_distribute_btn" />

    <Button
        android:id="@+id/main_distribute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/main_distribute_btn"
        app:layout_constraintBottom_toTopOf="@+id/main_order_btn"
        app:layout_constraintStart_toStartOf="@+id/main_order_btn" />

    <Button
        android:id="@+id/main_order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/main_order_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="FoodHunt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
